updated layout and added bio for Stein and Luca

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
 
 
         <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-5 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/portrait_Rekik-BASIRA2019_crop.jpg" alt="">
               <h4>Islem Rekik</h4>
@@ -360,7 +360,7 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
           </div>
 
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-5 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/portrait_Silva_larger.jpg" alt="">
               <h4>Stein Silva</h4>
@@ -368,7 +368,7 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
               <p>
                  Toulouse Neuroimaging Center, INSERM, Purpan University Hospital
               </p>
-			  <p></p>
+			<p>Stein SILVA, MD, PhD is a physician scientist, Chairman of Intensive Care Medicine (University Teaching Hospital of Toulouse, France) and Senior Researcher of Neuroscience (ToNIC lab, INSERM 1214, Toulouse, France). He is currently leading a translational research group dedicated to the study of overt and covert residual cognitive abilities in acute and severe brain injured patients. The majority of his research projects aim to develop and validate robust and explainable predictive models for coma patient’s neurological prognostication based on multimodal neuroimaging (hdEEG, functional and structural MRI, PET scan), innovative computer vision and cutting-edge new AI methods. Therefore, he has been conducting unique research on this topic and has been PI of several national and international research projects. He is member of French nationwide and European Scientific Committees devoted to the study of coma. He is regularly invited as Visiting Professor to neurosciences research laboratories across Europe, US and South America. He is currently Coordinator of the Data Warehouse of the University Teaching Hospital of Toulouse (Toulouse, France).</p>
               <div class="social">
                 <a href="https://www.linkedin.com/in/stein-silva-25112a63/"><i class="bi bi-linkedin"></i></a>
                 <a href="https://tonic.inserm.fr/equipes/stein-silva/"><i class="bx bx-link"></i></a>
@@ -378,7 +378,7 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
 
 
 
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="col-lg-5 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/portrait_Faes_20201025_162956_crop.jpg" alt="">
               <h4>Luca Faes</h4>
@@ -386,11 +386,7 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
               <p>
                  University of Palermo
               </p>
-              <div class="social">
-                <!-- <a href="https://twitter.com/kanibansal"><i class="bi bi-twitter"></i></a> -->
-                <a href="http://www.lucafaes.net/"><i class="bx bx-link"></i></a>
-              </div>
-				<!-- Luca Faes is Professor of Biomedical Engineering at the University of
+				<p>Luca Faes is Professor of Biomedical Engineering at the University of
 Palermo, Italy, where he teaches courses on Statistical Analysis of
 Biomedical Signals, Biosensors and Biomedical Devices. He has
 previously been with the Department of Physics of the University of
@@ -407,17 +403,22 @@ focuses on multivariate time series analysis and information theory
 applied to cardiovascular neuroscience, brain connectivity,
 brain-heart interactions, and network physiology. Within these fields,
 he co-authored eight book chapters and more than ~250 peer-reviewed
-publications, receiving >6000 citations (h-index: 46; font: Scholar). -->
+publications, receiving >6000 citations (h-index: 46; font: Scholar).</p>
+              <div class="social">
+                <!-- <a href="https://twitter.com/kanibansal"><i class="bi bi-twitter"></i></a> -->
+                <a href="http://www.lucafaes.net/"><i class="bx bx-link"></i></a>
+              </div>
+				<!--  -->
 
             </div>
 				
             </div>
 
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
         
-            </div>
+            </div> -->
 
-                        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+                        <div class="col-lg-5 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/speaker1.png" alt="">
               <h4>TBA</h4>
@@ -449,7 +450,7 @@ publications, receiving >6000 citations (h-index: 46; font: Scholar). -->
 		  <!-- Orgs -->
 		  		  <h5> Organizers </h5>
         <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/speaker1.png" alt="">
               <h4>Jonas Richiardi</h4>
@@ -464,7 +465,7 @@ publications, receiving >6000 citations (h-index: 46; font: Scholar). -->
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/speaker1.png" alt="">
               <h4>Sophie Achard</h4>
@@ -486,7 +487,7 @@ publications, receiving >6000 citations (h-index: 46; font: Scholar). -->
 		  <!-- PC -->
 		  <h5> Programme Committee </h5>
 		  <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/speaker1.png" alt="">
               <h4>Olaf Sporns</h4>
@@ -501,7 +502,7 @@ publications, receiving >6000 citations (h-index: 46; font: Scholar). -->
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/speaker1.png" alt="">
               <h4>Emma Towlson</h4>
@@ -515,7 +516,7 @@ publications, receiving >6000 citations (h-index: 46; font: Scholar). -->
               </div>
             </div>
           </div>
-  <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
               <div class="member">
                 <img src="assets/img/speaker1.png" alt="">
                 <h4>Daniele Marinazzo</h4>
@@ -529,7 +530,7 @@ publications, receiving >6000 citations (h-index: 46; font: Scholar). -->
                 </div>
               </div>
             </div>
-<div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+<div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/speaker1.png" alt="">
               <h4>Fabrizio de Vico Fallani</h4>
