bio and talk title for Islem

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
     <tr bgcolor="lightgray">
       <td valign="top">14:00-15:30</td>
       <td><p><strong>Session 3: Classical and Deep Machine Learning on brain networks</strong></p>
-        <p>&nbsp;Invited talk: Islem Rekik</p>
+        <p>&nbsp;Invited talk: Islem Rekik - Holistic Connectional Brain Templates: from learning to disease fingerprinting</p>
 		<p>Contributed talks: TBD</p></td>
     </tr>
     <tr>
@@ -348,10 +348,10 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
             <div class="member">
               <img src="assets/img/portrait_Rekik-BASIRA2019_crop.jpg" alt="">
               <h4>Islem Rekik</h4>
-              <span>Director, BASIRA Lab, Assoc. Professor at Imperial College London (I-X Hub)</span>
+              <span>Assoc. Professor</span>
               <p>
-                 Imperial College
-              </p>
+              Imperial College London (I-X) </p>
+			  <p>Islem Rekik is the Director of the Brain And SIgnal Research and Analysis (BASIRA) laboratory (http://basira-lab.com/) and an Associate Professor at Imperial College London (Innovation Hub I-X).  Together with BASIRA members, she conducted more than 85 cutting-edge research projects cross-pollinating AI and healthcare —with a sharp focus on brain imaging and neuroscience. She is also a co/chair/organizer of more than 20 international first-class conferences/workshops/competitions (e.g., Affordable AI 2021-22, Predictive AI 2018-2022, Machine Learning in Medical Imaging 2021-22, WILL competition 2021-22).  In addition to her 130+ high-impact publications, she is a strong advocate of equity, inclusiveness and diversity in research. She is the former President of the Women in MICCAI (WiM) and the co-founder/President of the international RISE Network to Reinforce Inclusiveness & diverSity and Empower minority researchers in Low-Middle Income Countries (LMIC)</p>
               <div class="social">
                 <!-- <a href="https://twitter.com/"><i class="bi bi-twitter"></i></a> -->
                 <a href="https://basira-lab.com/"><i class="bx bx-link"></i></a>
@@ -362,7 +362,7 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
 
           <div class="col-lg-5 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/portrait_Silva_larger.jpg" alt="">
+              <img src="assets/img/portrait_Silva_larger.jpg" alt="" height="28%" width="55%">
               <h4>Stein Silva</h4>
               <span>Professor</span>
               <p>
