added Ana pic and title

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
 	  <tr bgcolor="lightgray">
       <td valign="top">9:05-10:30</td>
       <td><p><strong>Session1:&nbsp;Spatio-temporal and dynamic brain networks </strong></p>
-        <p>Invited talk: TBD</p>
+        <p>Invited talk: Ana P Milan -&nbsp;Epidemic spreading models of seizure propagation and epilepsy surgery</p>
 		<p>Contributed talks: TBD</p> </td>
     </tr>
     <tr>
@@ -420,14 +420,14 @@ publications, receiving >6000 citations (h-index: 46; font: Scholar).</p>
 
                         <div class="col-lg-5 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/speaker1.png" alt="">
-              <h4>TBA</h4>
+              <img src="assets/img/portrait_annapmv.jpg" alt="">
+              <h4>Ana P Millán</h4>
               <span>Title</span>
               <p>
-                 Affiliation
+                 Dep. Electromagnetism and Matter Physics, University of Granada
               </p>
               <div class="social">
-                <a href="http://"><i class="bx bx-link"></i></a>
+                <a href="https://www.ugr.es/en/staff/ana-paula-millan-vidal"><i class="bx bx-link"></i></a>
               </div>
             </div>
             </div>
