updated programme and timing

--- a/index.html
+++ b/index.html
@@ -208,52 +208,60 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
     </tr>
 	  <tr bgcolor="lightgray">
       <td valign="top">9:05-10:30</td>
-      <td><p><strong>Session1:&nbsp;Spatio-temporal and dynamic brain networks </strong></p>
-        <p>Invited talk: Ana P Milan -&nbsp;Epidemic spreading models of seizure propagation and epilepsy surgery</p>
-		<p>Contributed talks: TBD</p> </td>
+      <td><p><strong>Session1:&nbsp;Temporal brain networks </strong></p>
+        <p>Invited talk: Ana P Millan -&nbsp;Epidemic spreading models of seizure propagation and epilepsy surgery</p>
+		<p>Contributed talks: TBD</p>
+		  		<p>Panel discussion</p></td>
     </tr>
     <tr>
       <td>10:30-11:00</td>
-      <td>Coffee break</td>
+      <td>Coffee break + posters</td>
     </tr>
     <tr bgcolor="lightgray">
       <td valign="top">11:00-12:15</td>
-      <td><p><strong>Session 2: Fundamental and clinical neuroscience applications</strong></p>
-        <p>Invited talk: Stein Silva - Structural, functional and molecular neuroimaging as an assessment tool for coma patients</p>
-		<p>Contributed talks: TBD</p></td>
+      <td><p><strong>Session 2: Network embeddings and representations</strong></p>
+        <p>Invited talk: Islem Rekik - Holistic Connectional Brain Templates: from learning to disease fingerprinting </p>
+		<p>Contributed talks: TBD</p>
+		<p>Panel discussion</p></td>
     </tr>
-    <tr>
+
+	  <tr>
       <td>12:15-14:00</td>
       <td>Lunch break + posters</td>
     </tr>
     <tr bgcolor="lightgray">
       <td valign="top">14:00-15:30</td>
-      <td><p><strong>Session 3: Classical and Deep Machine Learning on brain networks</strong></p>
-        <p>&nbsp;Invited talk: Islem Rekik - Holistic Connectional Brain Templates: from learning to disease fingerprinting</p>
-		<p>Contributed talks: TBD</p></td>
+      <td><p><strong>Session 3: Higher order interactions and networks</strong></p>
+        <p>Invited talk: Luca Faes - Information-theoretic assessment of complex dynamic interactions in brain and physiological networks</p>
+		<p>Contributed talks: TBD</p>
+		<p>Panel discussion</p></td> <!-- 1 brain-body, 4 higher order-->
     </tr>
     <tr>
       <td>15:30-16:00</td>
-      <td>Coffee break</td>
+      <td>Coffee break + posters</td>
     </tr>
     <tr bgcolor="lightgray">
-      <td valign="top">16:00-17:25</td>
-      <td><p><strong>Session 4: Brain-body networks</strong></p>
-        <p>Invited talk: Luca Faes - Information-theoretic assessment of complex dynamic interactions in brain and physiological networks</p>
-		<p>Contributed talks: TBD</p></td>
+      <td valign="top">16:00-17:20</td>
+      <td><p><strong>Session 4: Network analysis and generation</strong></p>
+		<p>&nbsp;Invited talk: Stein Silva - Structural, functional and molecular neuroimaging as an assessment tool for coma patients</p>
+		  <p>Contributed talks: TBD</p>
+		<p>Panel discussion</p>
+
+
+		</td>
     </tr>
+
     <tr>
-      <td>17:25-17:30</td>
+      <td>17:20-17:25</td>
       <td>Final remarks</td>
     </tr>
     <tr>
-      <td>17:30-18:30</td>
+      <td>17:25-18:30</td>
       <td>Poster session</td>
     </tr>
   </tbody>
 </table>
-			
-			<p>Each session will include an invited long talk and several contributed short talks, as well as a panel discussion</p>
+
 		  <br/>
 <p style="background-color:#DCDCDC">
 
