added final programme

--- a/index.html
+++ b/index.html
@@ -209,9 +209,12 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
 	  <tr bgcolor="lightgray">
       <td valign="top">9:05-10:30</td>
       <td><p><strong>Session1:&nbsp;Temporal brain networks </strong></p>
-        <p>Invited talk: Ana P Millan -&nbsp;Epidemic spreading models of seizure propagation and epilepsy surgery</p>
-		<p>Contributed talks: TBD</p>
-		  		<p>Panel discussion</p></td>
+        <p align="left">Invited talk: Ana P Millan -&nbsp;<em>Epidemic spreading models of seizure propagation and epilepsy surgery</em></p>
+		<p align="left">Jodie Naim-Feil - <em>Brain networks and temporal dynamics underlying cognition in schizophrenia</em></p>
+		<p align="left">Juliana Gonzalez-Astudillo - <em>Time-varying dynamics in motor-related brain networks</em></p>
+		<p align="left">Loredana Bellantuono - <em>Liquidity of gene co-expression patterns across age</em></p>
+		<p align="left">Vito Dichio - <em>Exploration-exploitation paradigm for the C.elegans brain network growth</em></p>
+		  <p align="left">Panel discussion</p></td>
     </tr>
     <tr>
       <td>10:30-11:00</td>
@@ -220,9 +223,11 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
     <tr bgcolor="lightgray">
       <td valign="top">11:00-12:15</td>
       <td><p><strong>Session 2: Network embeddings and representations</strong></p>
-        <p>Invited talk: Islem Rekik - Holistic Connectional Brain Templates: from learning to disease fingerprinting </p>
-		<p>Contributed talks: TBD</p>
-		<p>Panel discussion</p></td>
+        <p align="left">Invited talk: Islem Rekik - <em>Holistic Connectional Brain Templates: from learning to disease fingerprinting</em> </p>
+		<p align="left">Vincent Bazinet - <em>Predicting micro-structure from low-dimensional embeddings of brain networks</em></p>
+		<p align="left">Alberto Cacciola - <em>The hyperbolic network geometry of the cerebellum</em></p>
+		<p align="left">Adam Gosztolai - <em>Interpretable geometric representations of neural dynamics</em></p>
+		<p align="left">Panel discussion</p></td>
     </tr>
 
 	  <tr>
@@ -232,9 +237,12 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
     <tr bgcolor="lightgray">
       <td valign="top">14:00-15:30</td>
       <td><p><strong>Session 3: Higher order interactions and networks</strong></p>
-        <p>Invited talk: Luca Faes - Information-theoretic assessment of complex dynamic interactions in brain and physiological networks</p>
-		<p>Contributed talks: TBD</p>
-		<p>Panel discussion</p></td> <!-- 1 brain-body, 4 higher order-->
+        <p align="left">Invited talk: Luca Faes - <em>Information-theoretic assessment of complex dynamic interactions in brain and physiological networks</em></p>
+		<p align="left">Marta Morandini - <em>Higher-order brain time series improve subject and age fingerprinting</em></p>
+		<p align="left">Leonardo Di Gaetano - <em>Higher-order biomarkers for epilepsy surgery: an extended neighbourhood perspective of brain networks</em></p>
+		<p align="left">Fernando Santos - <em>Emergence of high-order functional hubs in the human brain</em></p>
+		<p align="left">Charley Presigny - <em>Dual characterization of multilayer brain networks in Alzheimer's disease</em></p>
+		<p align="left">Panel discussion</p></td> <!-- 1 brain-body, 4 higher order-->
     </tr>
     <tr>
       <td>15:30-16:00</td>
@@ -243,10 +251,12 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
     <tr bgcolor="lightgray">
       <td valign="top">16:00-17:20</td>
       <td><p><strong>Session 4: Network analysis and generation</strong></p>
-		<p>&nbsp;Invited talk: Stein Silva - Structural, functional and molecular neuroimaging as an assessment tool for coma patients</p>
-		  <p>Contributed talks: TBD</p>
-		<p>Panel discussion</p>
-
+		<p align="left">Invited talk: Stein Silva - <em>Structural, functional and molecular neuroimaging as an assessment tool for coma patients</em></p>
+		<p align="left">Diego Candia-Rivera  - <em>Brain-heart network physiology: unraveling the interplay between brain organization and cardiac oscillations</em></p>
+		<p align="left">Rémy Ben Messaoud  - <em>Low-dimension network controllability in the human brain</em></p>
+		<p align="left">Billy Morris  - <em>Exploring the contribution of lineage and birth time towards connectome assembly using generative models</em></p>
+		<p align="left">Filip Milislav  - <em>A rewiring algorithm for generating strength sequence-preserving randomized null networks</em></p>
+		<p align="left">Panel discussion</p></td>
 
 		</td>
     </tr>
@@ -264,9 +274,7 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
 
 		  <br/>
 <p style="background-color:#DCDCDC">
-
-	    The exact schedule will be announced after submissions are reviewed. 
-	    
+	This schedule is subject to last-minute changes
           </p>
 
         </div>
