--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
 
         <div class="section-title">
           <h2>Schedule</h2>
-          <p> Network Neuroscience 2023 will be held in Vienna, Austria, as a satellite of the <a href="https://netsci2023.wixsite.com/netsci2023">International School and Conferenc eon Network Science</a> (NetSci 2023). The one-day satellite will take place on site on
-the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as follows:</p>
+          <p> Network Neuroscience 2023 will be held in Vienna, Austria, as a satellite of the <a href="https://netsci2023.wixsite.com/netsci2023">International School and Conference on Network Science</a> (NetSci 2023). The one-day satellite will take place on site on
+the <strong>10th July</strong> .&nbsp;&nbsp;The  schedule is&nbsp; as follows (barring last-minute changes):</p>
           <p>&nbsp;</p>
 <table width="80%" border="1" align="center">
   <tbody>
@@ -273,10 +273,6 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
 </table>
 
 		  <br/>
-<p style="background-color:#DCDCDC">
-	This schedule is subject to last-minute changes
-          </p>
-
         </div>
 
 <!--
