--- a/index.html
+++ b/index.html
@@ -434,10 +434,22 @@ publications, receiving >6000 citations (h-index: 46; font: Scholar).</p>
             <div class="member">
               <img src="assets/img/portrait_annapmv.jpg" alt="">
               <h4>Ana P Millán</h4>
-              <span>Title</span>
+              <span>Ramón y Cajal fellow</span>
               <p>
-                 Dep. Electromagnetism and Matter Physics, University of Granada
+                 Dep. Electromagnetism and Matter Physics, University of Granada & Institute of Advanced Studies,
+University of Amsterdam
               </p>
+				<p> Ana P. Millan is Ramón y Cajal postdoctoral fellow in the
+Department of Electromagnetism and Matter Physics, at University of
+Granada, and a research fellow at the Institute of Advanced Studies (IAS,
+University of Amsterdam). Her research focusses on the modelling and
+analysis of network dynamics applied to neuroscience. She was previously a
+postdoctoral researcher at Amsterdam University Medical Center where she
+co-developed a computational tool named ESSES (Epidemic Spreading
+Seizure and Epilepsy Surgery model) to simulate epilepsy surgery in
+silico and aid surgical planning in a patient-by-patient manner. She has
+studied emergent synchronization on complex networks, with a focus on
+the role of the network geometry and or high-order coupling.</p>
               <div class="social">
                 <a href="https://www.ugr.es/en/staff/ana-paula-millan-vidal"><i class="bx bx-link"></i></a>
               </div>
