--- a/history.html
+++ b/history.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Network Neuroscience 2023</title>
+  <title>Network Neuroscience 2024</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -41,34 +41,35 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo me-auto">
-        <h1><a href="index.html">Network Neuroscience 2022</a></h1>
+        <h1><a href="index.html">Network Neuroscience 2024</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="index.html#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
-          <li><a class="nav-link scrollto" href="index.html#portfolio">Calls</a></li>
-          <li><a class="nav-link scrollto " href="index.html#services">Schedule</a></li>
-          <li><a class="nav-link scrollto" href="index.html#team">Speakers</a></li>
-          <li><a class="nav-link scrollto" href="index.html#register">Register</a></li>
-          <li class="dropdown"><a href="#"><span>Community</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="index.html#team">Team</a></li>
-              <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+        <li><a class="nav-link scrollto active" href="index.html#hero">Home</a></li>
+        <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
+        <li><a class="nav-link scrollto" href="index.html#CallForContribution">Submit</a></li>
+        <li><a class="nav-link scrollto " href="index.html#schedule">Schedule</a></li>
+        <li><a class="nav-link scrollto" href="index.html#register">Register</a></li>
+        <li><a class="nav-link scrollto" href="index.html#speakers">Speakers</a></li>
+        <li class="dropdown"><a href="#"><span>Community</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <!-- <li><a href="#team">Team</a></li>
+            <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="#">Social Media</a></li>
                   <li><a href="#">Journal</a></li>
                   <li><a href="#">Poster Session</a></li>
                 </ul>
               </li> -->
-              <li><a href="index.html#contact">Contact</a></li>
-              <li><a href="https://direct.mit.edu/netn">Journal</a></li>
-              <li><a href="poster.html">Poster Session</a></li>
-              <li><a href="history.html">History</a></li>
-              <li><a href="https://netsci2023.wixsite.com/netsci2023">NetSci 2023</a></li>
+              <li><a href="index.html#organizers">Organizers</a></li>
+            <li><a href="index.html#contact">Contact</a></li>
+            <li><a href="https://netsci2024.com/">NetSci 2024</a></li>
+            <li><a href="https://direct.mit.edu/netn">Journal</a></li>
+            <!--<li><a href="https://netneurosci.github.io/networks2022satellite/posterwall/#zoom=1&x=0.5&y=0.18460358469239463">Poster Session</a></li>-->
+            <li><a href="history.html">History</a></li>
             </ul>
           </li>
           
@@ -87,22 +88,10 @@
   <main id="main">
 
     <!-- ======= Breadcrumbs ======= -->
-    <section class="breadcrumbs">
-      <div class="container">
-
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>History</h2>
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>History</li>
-          </ol>
-        </div>
-
-      </div>
-    </section><!-- End Breadcrumbs -->
 
     <section class="inner-page">
       <div class="container">
+        <br><br>
 
         <div class="section-title">
           <h2>History</h2>
@@ -114,7 +103,7 @@
             <br>
             <br>
 
-            In the years 2020-21, we, and the whole scientific community, pivoted to online meetings. We fully embraced this format and the opportunities it provided to increase accessibility, diversity, and inclusion. In 2021, we held two half-day sessions at non-overlapping times to ensure different timezones had an equitable chance at attending during reasonable hours. We employed creative ways to connect the community, including inviting participants to add themselves to a network of researchers on our website, and an online poster wall that simulated a poster session with zoom rooms to talk with the more than 50 poster presenters. A record of >170 participants registered for the Network Neuroscience satellite. In 2022, we were well poised to make maximal use of our experiences from the past two years to run an innovative, engaging, and equitable online conference. In 2023 we are back to in person conference. 
+            In the years 2020-21, we, and the whole scientific community, pivoted to online meetings. We fully embraced this format and the opportunities it provided to increase accessibility, diversity, and inclusion. In 2021, we held two half-day sessions at non-overlapping times to ensure different timezones had an equitable chance at attending during reasonable hours. We employed creative ways to connect the community, including inviting participants to add themselves to a network of researchers on our website, and an online poster wall that simulated a poster session with zoom rooms to talk with the more than 50 poster presenters. A record of >170 participants registered for the Network Neuroscience satellite. In 2022, we were well poised to make maximal use of our experiences from the past two years to run an innovative, engaging, and equitable online conference. From 2023, we returned to in-person conferences with hybrid components. 
 
             <br>
             <br>
@@ -123,7 +112,8 @@
             Legacy material that is still live:
             <br>
             <br>
-	     <b><a href="http://networkneuroscience.github.io/index_2022.html">NetNeuroSci 2022</a></b>
+            <b><a href="http://networkneuroscience.github.io/index_2023.html">Network Neuroscience 2023</a></b><br>
+	     <b><a href="http://networkneuroscience.github.io/index_2022.html">Network Neuroscience 2022</a></b> <br>
             <b><a href="https://netneurosci.github.io/networks2021satellite/">Network Neuroscience 2021</a></b> <br>
             <b><a href="https://www.facebook.com/netsci2017.net/">Network Neuroscience 2017 Facebook Live</a></b>
 
