--- a/index.html
+++ b/index.html
@@ -370,20 +370,11 @@
           </div>
 
                 
-      <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-        <div class="member"> <img src="assets/img/speaker1sq.png" alt="">
-          <h4>Sophie Achard</h4>
-          <span>CNRS, Univ. Grenoble Alpes</span>
-          <p> </p>
-          <div class="social"> <a href="sophie_achard@mathstodon.xyz"><i class="bi bi-mastodon"></i></a> <a href="https://twitter.com/sophie_achard_g"><i class="bi bi-twitter"></i></a> <a href="http://mistis.inrialpes.fr/people/achard/"><i class="bx bx-link"></i></a> </div>
-        </div>
-      </div>
-    </div>
 
 
     </div>
     <!-- PC -->
-    <h5> Programme Committee: Jonas Richiardi, Fabrizio de Vico Fallani</h5>
+    <h5> Programme Committee: Jonas Richiardi, Fabrizio de Vico Fallani, Sophie Achard</h5>
     <!--
     <div class="row">
       <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
