--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
   <div class="container text-center text-md-left" data-aos="fade-up">
     <h1>Welcome to <span>Network Neuroscience 2024</span></h1>
-    <h2>NetSci 2024 affiliated satellite - Queb&eacute;c City, June 16 - 21, 2024</h2>
+    <h2>NetSci 2024 affiliated satellite - Queb&eacute;c City, June 18, 2024</h2>
     <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> --> 
   </div>
 </section>
@@ -182,7 +182,7 @@
   <div class="container">
     <div class="section-title">
       <h2>Schedule - Coming Soon</h2>
-      <p> Network Neuroscience 2024 will be held in Queb&eacute;c City as a satellite of the <a href="https://netsci2024.com">International School and Conference on Network Science</a> (NetSci 2024).</p>
+      <p> Network Neuroscience 2024 will be held on Tuesday 18th June in Queb&eacute;c City as a satellite of the <a href="https://netsci2024.com">International School and Conference on Network Science</a> (NetSci 2024).</p>
 
 <!--
       June 16 - 21, 2024, 
