--- a/index.html
+++ b/index.html
@@ -136,13 +136,20 @@
         <li>Spatio-temporal brain network models</li>
       </ul>
       <p>&nbsp;</p>
-      <p>Opening soon for submissions! Submit your abstract by the 22nd of March 2024, 23:59pm Anywhere on Earth. Submissions should be in the format of a one-page pdf with one figure.</p>
+      <p>We are now accepting submissions! <a href="https://netneurosci2024.sciencesconf.org/">Submit your abstract</a> by the 22nd of March 2024, 23:59pm Anywhere on Earth. Submissions should be in the format of a one-page pdf with one figure. Please indicate your preference for an oral or poster presentation (note that we cannot guarantee your preferred modality), and whether or not you have an accepted submission at the main conference.</p>
       <p>&nbsp;&nbsp;</p>
       <p>Please note that NetSci specifies that you may not deliver the same oral presentation at this satellite as at the main conference. Preference will be given to participants who do not have an oral presentation at the main conference. Posters may be presented at the satellite and at the main conference if appropriate.</p>
       <p>&nbsp;</p>
       <p>Decisions will be communicated by April 5th. Note that you must register for NetSci to attend (there is an option to select only the satellite sessions and school) and the early bird registration deadline is April 8th. <br>
         <br>
         <br>
+
+              <div class="portfolio-info">
+                <h4><a href="https://netneurosci2024.sciencesconf.org/">Submit</a></h4>
+                <!--<p>POSTER ONLY: July 8th 11:59pm AOE</p>-->
+              </div>
+
+
         <!-- Submissions are now closed, but last minute submissions may be accepted on a rolling basis as a POSTER ONLY. Submissions received after July 8th will not be considered.--> 
       </p>
     </div>
