deadline and speakers

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <li>Spatio-temporal brain network models</li>
       </ul>
       <p>&nbsp;</p>
-      <p>We are now accepting submissions! <a href="https://netneurosci2024.sciencesconf.org/">Submit your abstract</a> by the 22nd of March 2024, 23:59pm Anywhere on Earth. Submissions should be in the format of a one-page pdf with one figure. Please indicate your preference for an oral or poster presentation (note that we cannot guarantee your preferred modality), and whether or not you have an accepted submission at the main conference.</p>
+      <p>DEADLINE EXTENDED We are now accepting submissions! <a href="https://netneurosci2024.sciencesconf.org/">Submit your abstract</a> by the 27th of March 2024, 23:59pm Anywhere on Earth. Submissions should be in the format of a one-page pdf with one figure. Please indicate your preference for an oral or poster presentation (note that we cannot guarantee your preferred modality), and whether or not you have an accepted submission at the main conference.</p>
       <p>&nbsp;&nbsp;</p>
       <p>Please note that NetSci specifies that you may not deliver the same oral presentation at this satellite as at the main conference. Preference will be given to participants who do not have an oral presentation at the main conference. Posters may be presented at the satellite and at the main conference if appropriate.</p>
       <p>&nbsp;</p>
@@ -296,12 +296,60 @@
 <section id="speakers" class="team">
   <div class="container">
     <div class="section-title">
-      <h2>Speakers - Coming Soon</h2>
+      <h2>Speakers</h2>
       <p></p>
     </div>
 
-    <!--
 
+
+              <div class="row">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <img src="assets/img/enrico.jpeg" alt="">
+              <h4>Enrico Amico</h4>
+              <span>Institute of Health and Neurodevelopment</span>
+              <p>
+College of Health and Life Sciences, Aston University
+              </p>
+              <div class="social">
+                <a href="https://amicolab.org/"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <img src="assets/img/javeria.jpeg" alt="">
+              <h4>Javeria Ali Hashmi</h4>
+              <span>Canada Research Chair, Associate Professor</span>
+              <p>
+Department of Anesthesia, Pain management and Perioperative Medicine, Dalhousie University
+              </p>
+              <div class="social">
+                <a href="http://Netphyslab.com/"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <img src="assets/img/gen-team.jpeg" alt="">
+              <h4>Lilianne R. Mujica-Parodi</h4>
+              <span>Baszucki Endowed Chair of Metabolic Neuroscience</span>
+              <p>
+Department of Biomedical Engineering, State University of New York at Stony Brook
+              </p>
+              <div class="social">
+                <a href="http://lcneuro.org"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+    <!--
     <div class="row">
       <div class="col-lg-5 col-md-6 d-flex align-items-stretch">
         <div class="member"> <img src="assets/img/portrait_Rekik-BASIRA2019_crop.jpg" alt="">
@@ -309,6 +357,7 @@
           <span>Assoc. Professor</span>
           <p> Imperial College London (I-X) </p>
           <p>Islem Rekik is the Director of the Brain And SIgnal Research and Analysis (BASIRA) laboratory (http://basira-lab.com/) and an Associate Professor at Imperial College London (Innovation Hub I-X).  Together with BASIRA members, she conducted more than 85 cutting-edge research projects cross-pollinating AI and healthcare —with a sharp focus on brain imaging and neuroscience. She is also a co/chair/organizer of more than 20 international first-class conferences/workshops/competitions (e.g., Affordable AI 2021-22, Predictive AI 2018-2022, Machine Learning in Medical Imaging 2021-22, WILL competition 2021-22).  In addition to her 130+ high-impact publications, she is a strong advocate of equity, inclusiveness and diversity in research. She is the former President of the Women in MICCAI (WiM) and the co-founder/President of the international RISE Network to Reinforce Inclusiveness &amp; diverSity and Empower minority researchers in Low-Middle Income Countries (LMIC)</p>
+
           <div class="social"> 
             <a href="https://twitter.com/"><i class="bi bi-twitter"></i></a> 
             <a href="https://basira-lab.com/"><i class="bx bx-link"></i></a> </div>
