--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
         <li>Spatio-temporal brain network models</li>
       </ul>
       <p>&nbsp;</p>
-      <p>DEADLINE EXTENDED We are now accepting submissions! <a href="https://netneurosci2024.sciencesconf.org/">Submit your abstract</a> by the 27th of March 2024, 23:59pm Anywhere on Earth. Submissions should be in the format of a one-page pdf with one figure. Please indicate your preference for an oral or poster presentation (note that we cannot guarantee your preferred modality), and whether or not you have an accepted submission at the main conference.</p>
+      <p>NOTICE: We understand some people may be having problems with the submission system. If you cannot submit your abstract, please email emma dot towlson at ucalgary dot ca with the subject line "Network Neuroscience 2024 Abstract" and your abstract as a pdf before the deadline. <br>
+        DEADLINE EXTENDED We are now accepting submissions! <a href="https://netneurosci2024.sciencesconf.org/">Submit your abstract</a> by the 27th of March 2024, 23:59pm Anywhere on Earth. Submissions should be in the format of a one-page pdf with one figure. Please indicate your preference for an oral or poster presentation (note that we cannot guarantee your preferred modality), and whether or not you have an accepted submission at the main conference.</p>
       <p>&nbsp;&nbsp;</p>
       <p>Please note that NetSci specifies that you may not deliver the same oral presentation at this satellite as at the main conference. Preference will be given to participants who do not have an oral presentation at the main conference. Posters may be presented at the satellite and at the main conference if appropriate.</p>
       <p>&nbsp;</p>
