invited speakers and submissions update

--- a/index.html
+++ b/index.html
@@ -136,12 +136,10 @@
         <li>Spatio-temporal brain network models</li>
       </ul>
       <p>&nbsp;</p>
-      <p>NOTICE: We understand some people may be having problems with the submission system. If you cannot submit your abstract, please email emma dot towlson at ucalgary dot ca with the subject line "Network Neuroscience 2024 Abstract" and your abstract as a pdf before the deadline. <br>
-        DEADLINE EXTENDED We are now accepting submissions! <a href="https://netneurosci2024.sciencesconf.org/">Submit your abstract</a> by the 27th of March 2024, 23:59pm Anywhere on Earth. Submissions should be in the format of a one-page pdf with one figure. Please indicate your preference for an oral or poster presentation (note that we cannot guarantee your preferred modality), and whether or not you have an accepted submission at the main conference.</p>
-      <p>&nbsp;&nbsp;</p>
-      <p>Please note that NetSci specifies that you may not deliver the same oral presentation at this satellite as at the main conference. Preference will be given to participants who do not have an oral presentation at the main conference. Posters may be presented at the satellite and at the main conference if appropriate.</p>
+      <p>
+        Submissions are now closed for oral contributions, but we are accepting poster presentations on a rolling basis. <a href="https://netneurosci2024.sciencesconf.org/">Submit your abstract</a> in the format of a one-page pdf with one figure. Posters may be presented at both the satellite and at the main conference.</p>
       <p>&nbsp;</p>
-      <p>Decisions will be communicated by April 5th. Note that you must register for NetSci to attend (there is an option to select only the satellite sessions and school) and the early bird registration deadline is April 8th. <br>
+      <p>Note that you must register for NetSci to attend (there is an option to select only the satellite sessions and school) and the early bird registration deadline is April 8th. <br>
         <br>
         <br>
 
@@ -336,19 +334,38 @@ Department of Anesthesia, Pain management and Perioperative Medicine, Dalhousie 
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/gen-team.jpeg" alt="">
+              <img src="assets/img/lm-parodi.jpeg" alt="">
               <h4>Lilianne R. Mujica-Parodi</h4>
-              <span>Baszucki Endowed Chair of Metabolic Neuroscience</span>
+              <span>Baszucki Endowed Chair of Metabolic Neuroscience, Professor, Director - Laboratory for Computational Neurodiagnostics (LCNeuro)</span>
               <p>
-Department of Biomedical Engineering, State University of New York at Stony Brook
+Department of Biomedical Engineering,
+Laufer Center for Physical and Quantitative Biology,
+State University of New York at Stony Brook
               </p>
               <div class="social">
                 <a href="http://lcneuro.org"><i class="bx bx-link"></i></a>
+                <a href="https://neuroblox.org"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-        </div>
+       <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+        
+            </div>
+
+                        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <img src="assets/img/nils-forkert.jpeg" alt="">
+              <h4>Nils D. Forkert</h4>
+              <span>Canada Research Chair, Professor</span>
+              <p>
+          Department of Radiology, University of Calgary
+              </p>
+              <div class="social">
+                <a href="https://ucalgary.ca/miplab"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+            </div>
 
     <!--
     <div class="row">
