--- a/index.html
+++ b/index.html
@@ -228,13 +228,13 @@
 5:45pm - 6:30pm:  <b>Poster Session</b> <br>
 </p><br>
 <b>Differential Patterns of Associations within Audiovisual Integration Networks in Children with ADHD</b>. <i><u>Fatemeh Bakouie</u>, Mohammad Zamanzadeh Nasrabadi, Abbass Pourhedayat, and Fatemeh Hadaeghi.</i><br>
-<b>Increasing robustness and reproducibility in network neuroscience through multiverse analysis – The Comet toolbox</b>. <u><i>Micha Burkhardt</u> and Carsten Giessing.<br>
-<b>Detection of local connectivity perturbations of networks on a latent hyperbolic space</b>. <i>Alice Longhena</i>, Martin Guillemaud, and Mario Chavez.</i><br>
+<b>Increasing robustness and reproducibility in network neuroscience through multiverse analysis – The Comet toolbox</b>. <u><i>Micha Burkhardt</u> and Carsten Giessing.</i><br>
+<b>Detection of local connectivity perturbations of networks on a latent hyperbolic space</b>. <i><u>Alice Longhena</u>, Martin Guillemaud, and Mario Chavez.</i><br>
 <b>Emergence of a synergistic scaffold in the brains of human infants</b>. <u><i>Thomas Varley</u>, Olaf Sporns, Nathan Stevenson, Martha Welch, Michael Myers, Vanhatalo Sampsa, and Anton Tokariev.</i><br>
 <b>Memory capacity in reservoir computing</b>.<u> <i>Fatemeh Hadaeghi</u> and Claus Hilgetag.</i><br>
 <b>Timer varying synergy redundancy</b>. <u><i>Maria Pope</u>, Thomas Varley, and Olaf Sporns.</i><br>
 <b>Learning in spiking networks</b>. <u><i>Arsha Razavi</u></i>.<br>
-<b>Modelling the Complexity of Treatment Resistant Depression using Markov Random Fields</b>. <u><i>Alice Erchov</u></i>, Downar Jonathan, Daniel Blumberger, and Fidel Vila-Rodriguez.<br>
+<b>Modelling the Complexity of Treatment Resistant Depression using Markov Random Fields</b>. <u><i>Alice Erchov</u>, Downar Jonathan, Daniel Blumberger, and Fidel Vila-Rodriguez.</i><br>
 <b>Network spreading and local biological vulnerability in amyotrophic lateral sclerosis</b>. <i><u>Asa Farahani</u> and Bratislav Misic.</i><br>
 <b>Functional brain network interaction changes across the ovarian cycle</b>. <i><u>Xining Chen</u>, Joespeh Andreano, Abigail Giancola, Sophia Tchir, and Emma K. Towlson.</i><br>
 <b>Combined topological and spatial constraints are required to capture the structure of neural connectomes</b>. <i><u>Anastasiya Salova</u> and Istvan Kovacs.</i>
